--- a/package.json
+++ b/package.json
@@ -1,33 +1,48 @@
 {
-    "name": "vite-apetito",
-    "version": "0.0.0",
+    "private": true,
     "scripts": {
-        "dev": "vite",
-        "build": "vite build",
+        "dev": "vite --open",
+        "build": "cross-env NODE_ENV=production vite-ssg build",
         "serve": "vite preview"
     },
     "dependencies": {
-        "vue": "^3.0.5"
+        "@vueuse/core": "^4.3.5",
+        "@vueuse/head": "^0.5.1",
+        "nprogress": "^0.2.0",
+        "prism-theme-vars": "^0.2.0",
+        "vue": "^3.0.7",
+        "vue-i18n": "^9.0.0",
+        "vue-router": "^4.0.4"
     },
     "devDependencies": {
-        "@babel/core": "^7.13.10",
+        "@iconify/json": "^1.1.314",
+        "@intlify/vite-plugin-vue-i18n": "^2.0.1",
+        "@types/nprogress": "^0.2.0",
         "@typescript-eslint/eslint-plugin": "^4.17.0",
         "@typescript-eslint/parser": "^4.17.0",
         "@vitejs/plugin-vue": "^1.1.5",
-        "@vue/compiler-sfc": "^3.0.5",
+        "@vue/compiler-sfc": "^3.0.7",
         "@vue/eslint-config-typescript": "^7.0.0",
+        "@vue/server-renderer": "^3.0.7",
         "autoprefixer": "^10.2.4",
-        "babel-loader": "^8.2.2",
+        "cross-env": "^7.0.3",
         "eslint": "^7.22.0",
         "eslint-config-prettier": "^8.1.0",
         "eslint-plugin-prettier": "^3.3.1",
         "eslint-plugin-vue": "^7.7.0",
+        "pnpm": "^5.18.5",
         "postcss": "^8.2.8",
         "postcss-nested": "^5.0.5",
         "prettier": "^2.2.1",
         "tailwindcss": "^2.0.3",
         "typescript": "^4.2.3",
         "vite": "^2.0.5",
+        "vite-plugin-components": "^0.8.0",
+        "vite-plugin-icons": "^0.3.2",
+        "vite-plugin-pages": "^0.7.0",
+        "vite-plugin-pwa": "^0.5.6",
+        "vite-plugin-vue-layouts": "^0.2.2",
+        "vite-ssg": "^0.8.12",
         "vue-eslint-parser": "^7.6.0",
         "vue-loader": "^16.1.2"
     }
