--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
         "@vueuse/core": "^6.0.0",
         "@vueuse/head": "^0.6.0",
         "nprogress": "^0.2.0",
+        "pinia": "^2.0.0-0",
         "prism-theme-vars": "^0.2.2",
         "vue": "^3.2.4",
+        "vue-demi": "^0.11.3",
+        "vue-global-api": "^0.4.1",
         "vue-i18n": "^9.1.7",
         "vue-router": "^4.0.11"
     },
@@ -25,16 +28,17 @@
         "@vue/eslint-config-typescript": "^7.0.0",
         "@vue/server-renderer": "^3.2.4",
         "autoprefixer": "^10.3.2",
+        "critters": "^0.0.10",
         "cross-env": "^7.0.3",
         "eslint": "^7.32.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^3.4.1",
         "eslint-plugin-vue": "^7.16.0",
+        "https-localhost": "^4.6.5",
         "pnpm": "^6.14.2",
         "postcss": "^8.3.6",
         "postcss-nested": "^5.0.6",
         "prettier": "^2.3.2",
-        "tailwindcss": "^2.2.7",
         "typescript": "^4.3.5",
         "vite": "^2.5.0",
         "vite-plugin-components": "^0.13.2",
@@ -42,8 +46,10 @@
         "vite-plugin-pages": "^0.17.4",
         "vite-plugin-pwa": "^0.11.0",
         "vite-plugin-vue-layouts": "^0.3.1",
+        "vite-plugin-windicss": "^1.2.7",
         "vite-ssg": "^0.14.6",
         "vue-eslint-parser": "^7.10.0",
-        "vue-loader": "^15.9.8"
+        "vue-loader": "^15.9.8",
+        "vue-tsc": "^0.3.0"
     }
 }
