--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,14 +6,14 @@
         "lib": ["DOM", "ESNext"],
         "strict": true,
         "esModuleInterop": true,
-        "incremental": true,
+        "incremental": false,
         "skipLibCheck": true,
         "moduleResolution": "node",
         "resolveJsonModule": true,
         "noUnusedLocals": true,
         "strictNullChecks": true,
         "forceConsistentCasingInFileNames": true,
-        "types": ["vite/client", "vite-plugin-vue-layouts/client"],
+        "types": ["vite/client", "vite-plugin-pages/client", "vite-plugin-vue-layouts/client"],
         "paths": {
             "~/*": ["src/*"]
         }
