--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
-    "i18n-ally.localesPaths": [
-        "locales"
-    ]
+    "i18n-ally.keystyle": "nested",
+    "i18n-ally.localesPaths": "locales",
+    "i18n-ally.sortKeys": true,
+    "prettier.enable": false,
+    "typescript.tsdk": "node_modules/typescript/lib",
+    "volar.tsPlugin": true,
+    "volar.tsPluginStatus": false,
+    "files.associations": {
+        "*.css": "postcss"
+    }
 }
