--- a/package.json
+++ b/package.json
@@ -6,49 +6,49 @@
         "serve": "vite preview"
     },
     "dependencies": {
-        "@vueuse/core": "^6.0.0",
+        "@vueuse/core": "^6.2.1",
         "@vueuse/head": "^0.6.0",
         "nprogress": "^0.2.0",
         "pinia": "^2.0.0-0",
         "prism-theme-vars": "^0.2.2",
-        "vue": "^3.2.4",
-        "vue-demi": "^0.11.3",
+        "vue": "^3.2.9",
+        "vue-demi": "^0.11.4",
         "vue-global-api": "^0.4.1",
         "vue-i18n": "^9.1.7",
         "vue-router": "^4.0.11"
     },
     "devDependencies": {
-        "@iconify/json": "^1.1.392",
+        "@iconify/json": "^1.1.398",
         "@intlify/vite-plugin-vue-i18n": "^2.4.0",
         "@types/nprogress": "^0.2.0",
-        "@typescript-eslint/eslint-plugin": "^4.29.2",
-        "@typescript-eslint/parser": "^4.29.2",
-        "@vitejs/plugin-vue": "^1.4.0",
-        "@vue/compiler-sfc": "^3.2.4",
+        "@typescript-eslint/eslint-plugin": "^4.31.0",
+        "@typescript-eslint/parser": "^4.31.0",
+        "@vitejs/plugin-vue": "^1.6.1",
+        "@vue/compiler-sfc": "^3.2.9",
         "@vue/eslint-config-typescript": "^7.0.0",
-        "@vue/server-renderer": "^3.2.4",
-        "autoprefixer": "^10.3.2",
+        "@vue/server-renderer": "^3.2.9",
+        "autoprefixer": "^10.3.4",
         "critters": "^0.0.10",
         "cross-env": "^7.0.3",
         "eslint": "^7.32.0",
         "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-prettier": "^3.4.1",
-        "eslint-plugin-vue": "^7.16.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-vue": "^7.17.0",
         "https-localhost": "^4.6.5",
-        "pnpm": "^6.14.2",
+        "pnpm": "^6.14.7",
         "postcss": "^8.3.6",
         "postcss-nested": "^5.0.6",
         "prettier": "^2.3.2",
-        "typescript": "^4.3.5",
-        "vite": "^2.5.0",
-        "vite-plugin-components": "^0.13.2",
-        "vite-plugin-icons": "^0.6.5",
-        "vite-plugin-pages": "^0.17.4",
-        "vite-plugin-pwa": "^0.11.0",
-        "vite-plugin-vue-layouts": "^0.3.1",
-        "vite-plugin-windicss": "^1.2.7",
-        "vite-ssg": "^0.14.6",
-        "vue-eslint-parser": "^7.10.0",
+        "typescript": "^4.4.2",
+        "vite": "^2.5.3",
+        "vite-plugin-pages": "^0.18.0",
+        "vite-plugin-pwa": "^0.11.2",
+        "vite-plugin-vue-layouts": "^0.4.1",
+        "vite-plugin-windicss": "^1.4.1",
+        "vite-ssg": "^0.15.1",
+        "unplugin-icons": "^0.7.0",
+        "unplugin-vue-components": "^0.14.0",
+        "vue-eslint-parser": "^7.11.0",
         "vue-loader": "^15.9.8",
         "vue-tsc": "^0.3.0"
     }
